// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation should match snapshot with active link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #09111C;
  margin-top: 16px;
  margin-bottom: 0;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded>li:last-of-type {
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 4px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  cursor: pointer;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #3358CC;
}

.emotion-6:hover:not(:disabled) {
  background-color: #ECF1FF;
}

.emotion-6:active:not(:disabled) {
  background-color: #D5E0FC;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #C0C7CC;
}

.emotion-6:disabled svg {
  fill: #C0C7CC;
}

.emotion-6:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-6:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  color: #09111C;
  fill: #09111C;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9.emotion-9 {
  width: 24px;
  height: 24px;
  color: #09111C;
  fill: #09111C;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9.emotion-9 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9.emotion-9 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-10>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5A6A79;
  margin: 0;
  cursor: pointer;
  padding-inline: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent transparent transparent #3358CC;
  border-width: 4px;
  border-style: solid;
  color: #3358CC;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

.emotion-11:hover:not(:disabled) {
  color: #254CAC;
  background-color: #D5E0FC;
}

.emotion-11:active:not(:disabled) {
  color: #14328D;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-14 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-14::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-14::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-23 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-23>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-24 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-left: 48px;
  padding-right: 48px;
}

.emotion-25 {
  margin: 0;
  background-color: transparent;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-25::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-25::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-27 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5A6A79;
  margin: 0;
  cursor: pointer;
  padding-inline: 64px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-27 svg {
  width: 16px;
  height: 16px;
}

.emotion-27:hover:not(:disabled) {
  color: #254CAC;
  background-color: #D5E0FC;
}

.emotion-27:active:not(:disabled) {
  color: #14328D;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-27 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-27 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-49 {
  width: 100%;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 4px;
  margin-bottom: 8px;
}

.emotion-50 {
  border-style: solid;
  border-color: #DEE2E5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="expanded emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <button
                  aria-expanded="true"
                  aria-label="Show sub-menu for Group 1"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-7"
                  >
                    <span
                      class="emotion-8"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-9"
                        fill="currentColor"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-item emotion-10"
            >
              <a
                aria-current="page"
                class="emotion-11"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <span
                  class="emotion-7"
                >
                  <span
                    class="emotion-8"
                  >
                    <span
                      class="emotion-14"
                    >
                      Group 1 Page 1
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 2"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-7"
                  >
                    <span
                      class="emotion-8"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-9"
                        fill="currentColor"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24 24H0V0h24v24z"
                          fill="none"
                          opacity=".87"
                        />
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-group emotion-23"
            >
              <div
                class="emotion-24"
              >
                <h2
                  class="emotion-25"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-27"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 1 a
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-27"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 1 b
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-23"
            >
              <div
                class="emotion-24"
              >
                <h2
                  class="emotion-25"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-27"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 2 a
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-27"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 2 b
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-49"
        >
          <hr
            aria-hidden="true"
            class="emotion-50"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-2>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  -webkit-padding-start: 32px;
  padding-inline-start: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5A6A79;
  margin: 0;
  cursor: pointer;
  -webkit-padding-start: 32px;
  padding-inline-start: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3:hover:not(:disabled) {
  color: #254CAC;
  background-color: #D5E0FC;
}

.emotion-3:active:not(:disabled) {
  color: #14328D;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-6 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-10 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <li
          class="nk-menu-item emotion-2"
        >
          <a
            aria-current="false"
            class="emotion-3"
            href="/group1/page1"
          >
            <span
              class="emotion-4"
            >
              <span
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Group 1 Page 1
                </span>
              </span>
              <span
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                   
                </span>
              </span>
              <span
                class="emotion-5"
              >
                <span />
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="emotion-10"
    />
  </div>
</DocumentFragment>
`;

exports[`Sidebar navigation should match snapshot with no active link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #09111C;
  margin-top: 16px;
  margin-bottom: 0;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded>li:last-of-type {
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 4px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  cursor: pointer;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #3358CC;
}

.emotion-6:hover:not(:disabled) {
  background-color: #ECF1FF;
}

.emotion-6:active:not(:disabled) {
  background-color: #D5E0FC;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #C0C7CC;
}

.emotion-6:disabled svg {
  fill: #C0C7CC;
}

.emotion-6:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-6:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  color: #09111C;
  fill: #09111C;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9.emotion-9 {
  width: 24px;
  height: 24px;
  color: #09111C;
  fill: #09111C;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9.emotion-9 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9.emotion-9 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-10>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5A6A79;
  margin: 0;
  cursor: pointer;
  padding-inline: 64px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

.emotion-11:hover:not(:disabled) {
  color: #254CAC;
  background-color: #D5E0FC;
}

.emotion-11:active:not(:disabled) {
  color: #14328D;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-14 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-14::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-14::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-23 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-23>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-24 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-left: 48px;
  padding-right: 48px;
}

.emotion-25 {
  margin: 0;
  background-color: transparent;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-25::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-25::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-49 {
  width: 100%;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 4px;
  margin-bottom: 8px;
}

.emotion-50 {
  border-style: solid;
  border-color: #DEE2E5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 1"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-7"
                  >
                    <span
                      class="emotion-8"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-9"
                        fill="currentColor"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24 24H0V0h24v24z"
                          fill="none"
                          opacity=".87"
                        />
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-item emotion-10"
            >
              <a
                aria-current="false"
                class="emotion-11"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <span
                  class="emotion-7"
                >
                  <span
                    class="emotion-8"
                  >
                    <span
                      class="emotion-14"
                    >
                      Group 1 Page 1
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 2"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-7"
                  >
                    <span
                      class="emotion-8"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-9"
                        fill="currentColor"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24 24H0V0h24v24z"
                          fill="none"
                          opacity=".87"
                        />
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-group emotion-23"
            >
              <div
                class="emotion-24"
              >
                <h2
                  class="emotion-25"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 1 a
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 1 b
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-23"
            >
              <div
                class="emotion-24"
              >
                <h2
                  class="emotion-25"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 2 a
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 2 b
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-49"
        >
          <hr
            aria-hidden="true"
            class="emotion-50"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      />
    </nav>
    <div
      class="emotion-2"
    />
  </div>
</DocumentFragment>
`;

exports[`Sidebar navigation should render only routes under current section 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #09111C;
  margin-top: 16px;
  margin-bottom: 0;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded>li:last-of-type {
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 4px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 32px;
  height: 32px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  cursor: pointer;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-6 svg {
  fill: #3358CC;
}

.emotion-6:hover:not(:disabled) {
  background-color: #ECF1FF;
}

.emotion-6:active:not(:disabled) {
  background-color: #D5E0FC;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #C0C7CC;
}

.emotion-6:disabled svg {
  fill: #C0C7CC;
}

.emotion-6:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-6:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  color: #09111C;
  fill: #09111C;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9.emotion-9 {
  width: 24px;
  height: 24px;
  color: #09111C;
  fill: #09111C;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-9.emotion-9 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-9.emotion-9 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-10 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-10>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5A6A79;
  margin: 0;
  cursor: pointer;
  padding-inline: 64px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

.emotion-11:hover:not(:disabled) {
  color: #254CAC;
  background-color: #D5E0FC;
}

.emotion-11:active:not(:disabled) {
  color: #14328D;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-11 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-14 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-14::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-14::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-23 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-23>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-24 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-left: 48px;
  padding-right: 48px;
}

.emotion-25 {
  margin: 0;
  background-color: transparent;
  color: #09111C;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-25::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-25::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-49 {
  width: 100%;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 4px;
  margin-bottom: 8px;
}

.emotion-50 {
  border-style: solid;
  border-color: #DEE2E5;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="expanded emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <button
                  aria-expanded="true"
                  aria-label="Show sub-menu for Group 1"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-7"
                  >
                    <span
                      class="emotion-8"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-9"
                        fill="currentColor"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-item emotion-10"
            >
              <a
                aria-current="false"
                class="emotion-11"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <span
                  class="emotion-7"
                >
                  <span
                    class="emotion-8"
                  >
                    <span
                      class="emotion-14"
                    >
                      Group 1 Page 1
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h3
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <button
                  aria-expanded="false"
                  aria-label="Hide sub-menu for Group 2"
                  class="emotion-6"
                  data-testid="button"
                  type="button"
                >
                  <span
                    class="emotion-7"
                  >
                    <span
                      class="emotion-8"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-9"
                        fill="currentColor"
                        height="24px"
                        viewBox="0 0 24 24"
                        width="24px"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24 24H0V0h24v24z"
                          fill="none"
                          opacity=".87"
                        />
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </h3>
            <li
              class="nk-menu-group emotion-23"
            >
              <div
                class="emotion-24"
              >
                <h2
                  class="emotion-25"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 1 a
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 1 b
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-23"
            >
              <div
                class="emotion-24"
              >
                <h2
                  class="emotion-25"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 2 a
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-10"
                >
                  <a
                    aria-current="false"
                    class="emotion-11"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <span
                      class="emotion-7"
                    >
                      <span
                        class="emotion-8"
                      >
                        <span
                          class="emotion-14"
                        >
                          Group 2 Page 2 b
                        </span>
                      </span>
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-49"
        >
          <hr
            aria-hidden="true"
            class="emotion-50"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-2>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  -webkit-padding-start: 32px;
  padding-inline-start: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent;
  border-width: 4px;
  border-style: solid;
  color: #5A6A79;
  margin: 0;
  cursor: pointer;
  -webkit-padding-start: 32px;
  padding-inline-start: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3:hover:not(:disabled) {
  color: #254CAC;
  background-color: #D5E0FC;
}

.emotion-3:active:not(:disabled) {
  color: #14328D;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-6 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-10 {
  margin-bottom: 32px;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <li
          class="nk-menu-item emotion-2"
        >
          <a
            aria-current="false"
            class="emotion-3"
            href="/group1/page1"
          >
            <span
              class="emotion-4"
            >
              <span
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Group 1 Page 1
                </span>
              </span>
              <span
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                   
                </span>
              </span>
              <span
                class="emotion-5"
              >
                <span />
              </span>
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="emotion-10"
    />
  </div>
</DocumentFragment>
`;
